fix: visible news-card

--- a/blocks/news/card/news__card.css
+++ b/blocks/news/card/news__card.css
@@ -15,24 +15,24 @@
 @media screen and (max-width: 767px) {
   .news__card {
     max-width: 300px;
-    height: 448px;
+    height: 468px;
     padding: 24px;
-
+    gap: 20px;
   }
 }
 
-@media screen and (max-width: 1439px) {
+@media screen and (min-width: 768px) and (max-width: 1439px) {
   .news__card {
-    gap: 20px;
     max-width: 334px;
     height: 551px;
+    gap: 20px;
   }
-  .news__card:nth-child(3n) {
+  .news__card:nth-child(3) {
     display: none;
   }
 }
 
-.news__card:nth-child(2n) {
+.news__card:nth-child(2) {
   background: rgb(218, 239, 213);
 }
 
