--- a/blocks/news/news.css
+++ b/blocks/news/news.css
@@ -10,7 +10,7 @@
   grid-template-rows: 2fr;
   max-width: 1440px;
   /* max-width: 100%; */
-  border: solid 1px rgb(250, 0, 0);
+  /* border: solid 1px rgb(250, 0, 0); */
 
 }
 
