--- a/blocks/news/title/news__title.css
+++ b/blocks/news/title/news__title.css
@@ -14,13 +14,13 @@
 @media screen and (max-width: 1439px) {
   .news__title {
     font-size: 36px;
-    line-height: 120%;
+
   }
 }
 
 @media screen and (max-width: 767px) {
   .news__title {
-    font-size: 18px;
-    line-height: 120%;
+    font-size: 26px;
+
   }
 }
