--- a/blocks/news/topic-subtitle/news__topic-subtitle.css
+++ b/blocks/news/topic-subtitle/news__topic-subtitle.css
@@ -24,5 +24,6 @@
 @media screen and (max-width: 767px) {
   .news__topic-subtitle {
     font-size: 14px;
+    margin: 10px 0 0;
   }
 }
